remove IE6 compatibility, rename, make it jquery 1.9 compatible

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "tinyLightbox",
-    "description": "Lightweigth lightbox clone for jQuery with different animations and slideshow",
-    "version": "0.0.25",
+    "name": "tiny-lightbox",
+    "description": "Lightweight lightbox clone for jQuery with different animations and slideshow mode.",
+    "version": "0.1.0",
     "author": "Oleg Slobodskoi <oleg008@gmail.com>",
-    "repository": "git://github.com/kof/jquery-icrop.git",
+    "repository": "git://github.com/kof/jquery-tinyLightbox.git",
     "keywords": ["lightbox", "gallery", "animation", "slideshow", "jquery"],
     "dependencies": {
-        "jquery": ">= 1.3.2",
-        "jquery-ui": ">= 1.8.17"
-    }
+        "jquery": ">= 1.6.0"
+    },
     "licenses": [
         {
             "type": "MIT",
